--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,23 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+                        
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <configuration>
+                                <source>1.8</source>
+                                <target>1.8</target>
+                                <archive>
+                                    <manifest>
+                                        <addClasspath>true</addClasspath>
+                                        <mainClass>com.reto3.mintic.Reto3Application</mainClass>
+                                    </manifest>
+                                </archive>
+                            </configuration>
+                        </plugin>
+
+                        
 		</plugins>
 	</build>
 
